tests/baselines/reference/privateIndexer2.errors.txt
==== tests/cases/compiler/privateIndexer2.ts (7 errors) ====
    // private indexers not allowed
    
    var x = {
        private [x: string]: string;
                ~
!!! privateIndexer2.ts(4,13): error TS1005: ':' expected.
                  ~
!!! privateIndexer2.ts(4,15): error TS1005: ',' expected.
                           ~
!!! privateIndexer2.ts(4,24): error TS1005: ',' expected.
                                   ~
!!! privateIndexer2.ts(4,32): error TS1005: ':' expected.
                    ~~~~~~
!!! privateIndexer2.ts(4,17): error TS2095: Could not find symbol 'string'.
    }
    ~
!!! privateIndexer2.ts(5,1): error TS1008: Unexpected token; 'module, class, interface, enum, import or statement' expected.
    
    var y: {
        private[x: string]: string;
               ~
!!! privateIndexer2.ts(8,12): error TS1005: ';' expected.
    }